# cormine

./: Cargo.toml  README.md
assets/images/: blocks.aseprite
assets/shaders/: sun.wgsl  voxel.wgsl
cormine_generate/: Cargo.toml
cormine_generate/src/: main.rs
cormine_shared/: Cargo.toml
cormine_shared/src/: lib.rs  save.rs  voxel.rs
src/: args.rs  chunk.rs  debug.rs  highlight.rs  input.rs  main.rs  material.rs  mesh.rs  octree.rs  player.rs  save.rs  sky.rs  terrain.rs  ui.rs  voxel.rs  world.rs
